Fixed name of restart handler

--- a/ansible/playbooks/bootstrap-proxmox.yml
+++ b/ansible/playbooks/bootstrap-proxmox.yml
@@ -577,7 +577,7 @@
           Next: Configure network interfaces and join cluster
 
   handlers:
-    - name: Restart timesyncd
+    - name: Restart chronyd
       ansible.builtin.systemd:
         name: chronyd
         state: restarted
