Changed method to extract cluster fingerprint

--- a/ansible/playbooks/cluster-formation.yml
+++ b/ansible/playbooks/cluster-formation.yml
@@ -211,7 +211,7 @@
         - name: Get cluster fingerprint from master
           ansible.builtin.shell: |
             set -o pipefail
-            openssl x509 -noout -fingerprint -sha256 < /etc/pve/priv/ssl/pve-root-ca.pem | cut -d= -f2
+            pvenode cert info --output-format json | jq -r '.[] | select(.filename=="pve-ssl.pem") | .fingerprint'
           register: cluster_fingerprint
           delegate_to: "{{ groups['proxmox_cluster_masters'][0] }}"
           become: true
