--- a/ansible/playbooks/cluster-formation.yml
+++ b/ansible/playbooks/cluster-formation.yml
@@ -171,6 +171,74 @@
 
               Next: Configure shared storage (NFS/Ceph)
 
+# ===== PLAY 1.5: PREPARE SSH KEY TRUST BETWEEN NODES =====
+- name: Prepare SSH Key Trust Between Proxmox Nodes
+  hosts: proxmox_cluster_all
+  become: true
+  gather_facts: true
+
+  tasks:
+    - name: Ensure root SSH directory exists
+      file:
+        path: /root/.ssh
+        state: directory
+        mode: '0700'
+        owner: root
+        group: root
+
+    - name: Check if root SSH key exists
+      stat:
+        path: /root/.ssh/id_rsa
+      register: root_ssh_key
+
+    - name: Generate SSH key for root (if missing)
+      command: ssh-keygen -t rsa -b 4096 -f /root/.ssh/id_rsa -N ''
+      args:
+        creates: /root/.ssh/id_rsa
+      when: not root_ssh_key.stat.exists
+
+    - name: Fetch public keys from all nodes
+      slurp:
+        src: /root/.ssh/id_rsa.pub
+      register: node_public_keys
+
+    - name: Build authorized_keys for all nodes
+      set_fact:
+        all_public_keys: "{{ groups['proxmox_cluster_all'] | map('extract', hostvars) | map(attribute='node_public_keys') | map(attribute='content') | map('b64decode') | list }}"
+      run_once: true
+
+    - name: Deploy authorized_keys to all nodes
+      authorized_key:
+        user: root
+        state: present
+        key: "{{ item }}"
+      loop: "{{ all_public_keys }}"
+      loop_control:
+        label: "{{ item.split()[-1] | default('key') }}"
+
+    - name: Add all cluster nodes to known_hosts
+      known_hosts:
+        name: "{{ hostvars[item].ansible_host }}"
+        key: "{{ lookup('pipe', 'ssh-keyscan -H ' + hostvars[item].ansible_host) }}"
+        state: present
+      loop: "{{ groups['proxmox_cluster_all'] }}"
+      when: item != inventory_hostname
+
+    - name: Test SSH connectivity between nodes
+      command: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@{{ hostvars[item].ansible_host }} hostname"
+      loop: "{{ groups['proxmox_cluster_all'] }}"
+      when: item != inventory_hostname
+      register: ssh_test
+      changed_when: false
+      failed_when: ssh_test.rc != 0
+
+    - name: Display SSH test results
+      debug:
+        msg: "{{ inventory_hostname }} can SSH to {{ item.item }}: {{ item.stdout }}"
+      loop: "{{ ssh_test.results }}"
+      when: not item.skipped | default(false)
+
+
 # ===== PLAY 2: Join Member Nodes to Cluster =====
 - name: Join Member Nodes to Cluster
   hosts: proxmox_cluster_members
