--- a/ansible/playbooks/cluster-formation.yml
+++ b/ansible/playbooks/cluster-formation.yml
@@ -204,7 +204,7 @@
 
     - name: Build authorized_keys for all nodes
       set_fact:
-        all_public_keys: "{{ groups['proxmox_cluster_all'] | map('extract', hostvars) | map(attribute='node_public_keys') | map(attribute='content') | map('b64decode') | list }}"
+        all_public_keys: "{{ groups['proxmox_cluster_members'] | map('extract', hostvars) | map(attribute='node_public_keys') | map(attribute='content') | map('b64decode') | list }}"
       run_once: true
 
     - name: Deploy authorized_keys to all nodes
@@ -221,12 +221,12 @@
         name: "{{ hostvars[item].ansible_host }}"
         key: "{{ lookup('pipe', 'ssh-keyscan -H ' + hostvars[item].ansible_host) }}"
         state: present
-      loop: "{{ groups['proxmox_cluster_all'] }}"
+      loop: "{{ groups['proxmox_cluster_members'] }}"
       when: item != inventory_hostname
 
     - name: Test SSH connectivity between nodes
       command: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@{{ hostvars[item].ansible_host }} hostname"
-      loop: "{{ groups['proxmox_cluster_all'] }}"
+      loop: "{{ groups['proxmox_cluster_members'] }}"
       when: item != inventory_hostname
       register: ssh_test
       changed_when: false
