Trying Stdin on cluster add

--- a/ansible/playbooks/cluster-formation.yml
+++ b/ansible/playbooks/cluster-formation.yml
@@ -291,6 +291,8 @@
             --link0 {{ inventory_hostname }}.homelab.bredhauer.net
             --link1 {{ inventory_hostname }}.internal.bredhauer.net
             --fingerprint {{ cluster_fingerprint.stdout }}
+          args:
+            stdin: {{ PROXMOX_ROOT_PASSWORD }}
           register: node_join
           changed_when: node_join.rc == 0
           failed_when: >
